force-app/main/default/objects/School_Metric__c.object
<CustomObject>
    <description>This object captures a few metrics of a school</description>
    <fields>
        <fullName>ATAR_60_00_64_99__c</fullName>
        <label>ATAR 60.00-64.99</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATAR_65_00_69_99__c</fullName>
        <label>ATAR 65.00-69.99</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATAR_70_00_74_99__c</fullName>
        <label>ATAR 70.00-74.99</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATAR_Below_59_99__c</fullName>
        <label>ATAR Below 59.99</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATAR__c</fullName>
        <label>ATAR</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <description>The name of record migrated from source org</description>
        <externalId>true</externalId>
        <label>Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Year_10_Domestic_Students__c</fullName>
        <description>Captures the number of Year 10 domestic students in a school</description>
        <label>Count of Year 10 Domestic Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Year_11_Domestic_Students__c</fullName>
        <description>Captures the number of Year 11 domestic students in a school</description>
        <label>Count of Year 11 Domestic Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Year_12_Domestic_Students__c</fullName>
        <description>Captures the number of Year 12 domestic students in a school</description>
        <label>Count of Year 12 Domestic Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Year_12_IB_Students__c</fullName>
        <description>Captures the number of Year 12 International Baccalaureate students in a school</description>
        <label>Count of Year 12 IB Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Year_12_International_Students__c</fullName>
        <description>Captures the number of Year 12 international students in a school</description>
        <label>Count of Year 12 International Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enhancement_Studies__c</fullName>
        <label>Enhancement Studies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrolment_Variance__c</fullName>
        <label>Enrolment Variance</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrolment__c</fullName>
        <label>Enrolment</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <label>Faculty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OFS</fullName>
                </value>
                <value>
                    <fullName>SAM</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Architecture</fullName>
                </value>
                <value>
                    <fullName>Arts</fullName>
                </value>
                <value>
                    <fullName>Business and Economics</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Law</fullName>
                </value>
                <value>
                    <fullName>Medicine, Nursing and Health Sciences</fullName>
                </value>
                <value>
                    <fullName>Pharmacy and Pharmaceutical Sciences</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Preference_Variation__c</fullName>
        <label>First Preference Variation</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Preference__c</fullName>
        <label>First Preference</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Higher_Education_Participation__c</fullName>
        <label>Higher Education Participation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ICSEA__c</fullName>
        <label>ICSEA</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monash_Extension__c</fullName>
        <label>Monash Extension</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monash_Scholars__c</fullName>
        <label>Monash Scholars</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>School Metrics</relationshipLabel>
        <relationshipName>School_Metrics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Size_of_Year_12_cohort__c</fullName>
        <label>Size of Year 12 cohort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Under_Represented__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Under Represented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>School Metric</label>
    <nameField>
        <displayFormat>SM-{00000}</displayFormat>
        <label>School Metrics ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>School Metrics</pluralLabel>
    <recordTypes>
        <fullName>Faculty</fullName>
        <active>true</active>
        <label>Faculty</label>
    </recordTypes>
    <recordTypes>
        <fullName>OFS</fullName>
        <active>true</active>
        <description>Standard Record Type for OFS Schools Engagement</description>
        <label>OFS</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Year_Numeric_Validation_2</fullName>
        <active>true</active>
        <description>Validation rule to prevent users from entering alphanumeric characters in year</description>
        <errorConditionFormula>ISNUMBER(Year__c) = FALSE</errorConditionFormula>
        <errorMessage>Please make sure that the Year field contains only numeric characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Year_length_validation</fullName>
        <active>true</active>
        <description>Check if the Year length is valid</description>
        <errorConditionFormula>LEN(Year__c)&lt;4</errorConditionFormula>
        <errorMessage>The year field should contain four numbers</errorMessage>
    </validationRules>
</CustomObject>